# Reflex-User-Portal

./: .env.template  .env.test  .env.test.template  .gitignore  .gitmodules  README.md  git_commit_all.sh  main.py  nixpacks.toml  pyproject.toml  requirements.full.txt  requirements.txt  rxconfig.py
alembic/versions/: 4dab5c2b6ed3_.py  521c85a96a29_.py  5a41b2ad60b3_.py  69479c0bef1b_.py  7040da41ce0d_.py  7510fe07b66e_.py  791073ff752d_.py  a2d07c80b283_.py  b1cba554500b_.py  baae162d4d6a_.py  c912fe6c51a5_.py  cc8d2c759ac8_.py  cdc32b3102e1_.py  cebf35ed3fb0_.py  e3be37814b33_.py  fb7b06253f92_.py
app/: config.py  reflex_app.py
app/reflex_user_portal/: __init__.py  styles.py
app/tests/: conftest.py  test_api_request.py  test_auth.py  test_clerk_api.py  test_collections.py  test_complete_task_flow.py  test_correct_url.py  test_direct_result.py  test_direct_task_api.py  test_task_api.py  test_task_system.py  test_task_websocket.py  test_user_api.py
app/utils/: logger.py
reflex_user_portal/: config.py  reflex_app.py  reflex_user_portal.py
reflex_user_portal/app/: __init__.py  styles.py
reflex_user_portal/backend/: admin_api_panel_state.py  table_state.py  user_state.py
reflex_user_portal/components/: navbar.py  sidebar.py  sign_in.py
reflex_user_portal/models/: __init__.py  admin_config.py  user.py  user_attribute.py
reflex_user_portal/templates/: access_denied.py  portal.py  template.py  (+1 more)
scripts/: run_dev.sh  run_prod.sh  test_task_api.sh
tests/: conftest.py  test_auth.py  test_collections.py  test_task_api.py  test_websocket_stream.py
(+155 files in other folders)
